@@ -464,6 +464,11 @@ Client::translateMessage(const QJsonObject &reply, const QString &fallbackKey)
 				return tr("Operator status revoked from %1 by %2.")
 					.arg(target, by);
 			}
+		} else if(key == net::ServerReply::KEY_OUT_OF_SPACE) {
+			return tr(
+				"Session size limit reached! To continue drawing, "
+				"an operator must reset the session to bring it down to a "
+				"smaller size. This can be done via Session > Reset.");
 		} else if(key == net::ServerReply::KEY_RESET_CANCEL) {
 			return tr("Session reset cancelled! An operator must unlock the "
 					  "canvas and reset the session manually.");
