@@ -3,6 +3,7 @@ Unreleased Version 2.2.2-pre
  * Server Fix: Properly sever connections on read, write and timeout errors.
  * Fix: Load annotations from ORA files saved by Drawpile 2.1 properly. Thanks RyanMolyneux for reporting.
  * Feature: Ignore inputs with invalid pressure during strokes, toggleable in the preferences in case there's tablets that behave this way in a valid case somehow. Thanks Lunalatte for reporting.
+ * Server Fix: Handle sessions running out of space better, they should no longer end up in an unrecoverable state. The messages in chat are also now translatable, more informative and don't get spammed for every command. Thanks Bluestrings and Charmandrigo for reporting.
 
 2024-02-25 Version 2.2.2-beta.1
  * Server Feature: Allow adding a message when kicking someone through the admin API.
